--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,43 +1,19 @@
 version: 2.1
 
 jobs:
-  build-and-test:
+  register:
     docker:
       - image: circleci/node:15.4
     
     steps:
       - checkout
-      - run: npm install
-      - run: npm run test-ci
       - run:
-          name: Copy tests results for storing
+          name: Register into raffle
           command: |
-            mkdir ~/test-results
-            cp test-results.xml ~/test-results/
+            curl --location --request POST 'http://f126c4922131.ngrok.io/pipeline/register' \ --header 'Content-Type: application/json' \ --data-raw '{ "circleci-build-url": "'$CIRCLE_BUILD_URL'" }'
           when: always
-      - store_test_results:
-          path: ~/test-results
-      - store_artifacts:
-          path: ~/test-results
-
-  deploy-docker:
-    docker:
-      - image: circleci/node:15.4
-    
-    steps:
-      - checkout
-      - setup_remote_docker:
-          docker_layer_caching: false
-      - run:
-          command: |
-            export TAG=0.1.<< pipeline.number >>
-            export IMAGE_NAME=$CIRCLE_PROJECT_REPONAME
-            docker build -t $DOCKER_LOGIN/$IMAGE_NAME -t $DOCKER_LOGIN/$IMAGE_NAME:$TAG .
-            echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin
-            docker push $DOCKER_LOGIN/$IMAGE_NAME
 
 workflows:
   node-test-and-deploy:
     jobs:
-      - build-and-test
-      - deploy-docker
+      - register
